--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://jmorg21.github.io/react-portfolio/",
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
